Make RegistryControl asynchronous
The invocation typically involves a data store operation, hence it
should be asynchrous, shifting waiting to the caller, rather than
blocking the calling thread.

Since we are changing the return value semantics, let's also revise how
the implementation is structured, minimizing cognitive load when reading
the code.

JIRA: SRVUTILS-10
Change-Id: I5d576e0453fca403d39360388ca709d7ad36647b
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>